# dialogos

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  deny.toml  dialogos.example.toml  flake.nix  system-prompt.txt
.github/workflows/: ci.yml
deploy/: dialogos.service
scripts/: check-pins.sh
src/: bot.rs  config.rs  convos.rs  lib.rs  limits.rs  llm.rs  main.rs
tests/: direct_conversation.rs  event_handling.rs  worker_pool.rs
